# Tiger

./: .gitignore  CMakeLists.txt  HISTORY.md  Makefile  README.md  SYNTAX.md
chap1/: a.out  main.c  prog1.c  prog1.h
chap10/: assem.c  flowgraph.c  fuck.tig.s  function.tig  function.tig.s  graph.c  liveness.c  liveness.h  makefile  parse.c  tags  temp.c  translate.c  tree.h  ucodegen.c  uframe.c
chap2/: a.c  driver.c  fuck.tig  lex.yy.c  tiger.lex
chap3/: conflict.txt  fuck.tig  lex.yy.c  merge.tig  rf.y  tiger.lex  y.output  y.tab.c  y.tab.h
chap4/: absyn.c  absyn.h  fuck.tig  lex.yy.c  makefile  merge.tig  parse.c  prabsyn.c  symbol.c  tiger.lex  tiger.y  util.h  y.output
chap5/: a.out  parse.c
chap6/: .semant.c.swp  .translate.c.swp  .uframe.c.swp  fuck.tig  semant.c  translate.c  uframe.c
chap7/: .semant.c.swp  env.c  frame.h  makefile  parse.c  printtree.c  printtree.h  semant.c  test2.tig  test3.tig  test4.tig  test6.tig  test8.tig  test_translate.c  translate.c  translate.h  tree.c  tree.h  uframe.c
chap8/: canon.c  fuck.tig.s  function.tig.s  uframe.c
chap9/: frame.h  function.tig  function.tig.s  makefile  parse.c  printtree.c  tags  translate.c  ucodegen.c  uframe.c  util.c  util.h
examples/: interpreter.cc  interpreter.h  main.cc
mocks/: editable.tig  merge.tig  queens.tig  test1.tig  test10.tig  test11.tig  test12.tig  test14.tig  test15.tig  test16.tig  test17.tig  test18.tig  test19.tig  test2.tig  test20.tig  test21.tig  test22.tig  test23.tig  test24.tig  test25.tig  test26.tig  test27.tig  test28.tig  test29.tig  test3.tig  test30.tig  test31.tig  test32.tig  test33.tig  test34.tig  test35.tig  test36.tig  test37.tig  test38.tig  test39.tig  test4.tig  test40.tig  test41.tig  test42.tig  test43.tig  (+11 more)
src/: errormsg.h  main.cc
src/ast/: dump.cc  index.cc  index.h  tiger.y
src/error/: index.cc  index.h
src/lexical/: error.cc  error.h  index.cc  index.h  tiger.lex  tokens.h
src/semantic/: ecode.h  errcode.h  index.cc  index.h  stringify.cc  type.cc  type.h  value.cc  value.h
src/syntax/: dump.cc  dump.h  index.cc  index.h  tiger.y
src/utils/: binary-tree.cc  binary-tree.h  index.cc  index.h  symbol.cc  symbol.h  table.cc  table.h
test/: ast.spec.cc  framework.spec.cc  global.h  lexical.spec.cc  main.cc  makefile  semantic.spec.cc  syntax.spec.cc  utils.spec.cc
